Checkpoint
Checkpoint with basic module structure, and ephemoral and persistent access to components.